NetLangParser.py
# Generated from NetLang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class NetLangParser ( Parser ):

    grammarFileName = "NetLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'network'", "'device'", "'subnet'", "'interface'", 
                     "'connect'", "'to'", "'ip'", "'mask'", "'gateway'", 
                     "'bandwidth'", "'latency'", "'router'", "'switch'", 
                     "'host'", "'Kbps'", "'Mbps'", "'Gbps'", "'ms'", "'us'", 
                     "'{'", "'}'", "'.'", "'/'" ]

    symbolicNames = [ "<INVALID>", "NETWORK", "DEVICE", "SUBNET", "INTERFACE", 
                      "CONNECT", "TO", "IP", "MASK", "GATEWAY", "BANDWIDTH", 
                      "LATENCY", "ROUTER", "SWITCH", "HOST", "KBPS", "MBPS", 
                      "GBPS", "MS", "US", "LBRACE", "RBRACE", "DOT", "SLASH", 
                      "ID", "INT", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_networkBlock = 1
    RULE_networkBody = 2
    RULE_statement = 3
    RULE_deviceDecl = 4
    RULE_deviceBody = 5
    RULE_deviceProp = 6
    RULE_deviceType = 7
    RULE_subnetDecl = 8
    RULE_interfaceDecl = 9
    RULE_connectDecl = 10
    RULE_portRef = 11
    RULE_linkProps = 12
    RULE_linkProp = 13
    RULE_speedUnit = 14
    RULE_timeUnit = 15
    RULE_ipAddress = 16

    ruleNames =  [ "program", "networkBlock", "networkBody", "statement", 
                   "deviceDecl", "deviceBody", "deviceProp", "deviceType", 
                   "subnetDecl", "interfaceDecl", "connectDecl", "portRef", 
                   "linkProps", "linkProp", "speedUnit", "timeUnit", "ipAddress" ]

    EOF = Token.EOF
    NETWORK=1
    DEVICE=2
    SUBNET=3
    INTERFACE=4
    CONNECT=5
    TO=6
    IP=7
    MASK=8
    GATEWAY=9
    BANDWIDTH=10
    LATENCY=11
    ROUTER=12
    SWITCH=13
    HOST=14
    KBPS=15
    MBPS=16
    GBPS=17
    MS=18
    US=19
    LBRACE=20
    RBRACE=21
    DOT=22
    SLASH=23
    ID=24
    INT=25
    WS=26
    COMMENT=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def networkBlock(self):
            return self.getTypedRuleContext(NetLangParser.NetworkBlockContext,0)


        def EOF(self):
            return self.getToken(NetLangParser.EOF, 0)

        def getRuleIndex(self):
            return NetLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = NetLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.networkBlock()
            self.state = 35
            self.match(NetLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NetworkBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NETWORK(self):
            return self.getToken(NetLangParser.NETWORK, 0)

        def ID(self):
            return self.getToken(NetLangParser.ID, 0)

        def LBRACE(self):
            return self.getToken(NetLangParser.LBRACE, 0)

        def networkBody(self):
            return self.getTypedRuleContext(NetLangParser.NetworkBodyContext,0)


        def RBRACE(self):
            return self.getToken(NetLangParser.RBRACE, 0)

        def getRuleIndex(self):
            return NetLangParser.RULE_networkBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNetworkBlock" ):
                listener.enterNetworkBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNetworkBlock" ):
                listener.exitNetworkBlock(self)




    def networkBlock(self):

        localctx = NetLangParser.NetworkBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_networkBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(NetLangParser.NETWORK)
            self.state = 38
            self.match(NetLangParser.ID)
            self.state = 39
            self.match(NetLangParser.LBRACE)
            self.state = 40
            self.networkBody()
            self.state = 41
            self.match(NetLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NetworkBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NetLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(NetLangParser.StatementContext,i)


        def getRuleIndex(self):
            return NetLangParser.RULE_networkBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNetworkBody" ):
                listener.enterNetworkBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNetworkBody" ):
                listener.exitNetworkBody(self)




    def networkBody(self):

        localctx = NetLangParser.NetworkBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_networkBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 60) != 0):
                self.state = 43
                self.statement()
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def deviceDecl(self):
            return self.getTypedRuleContext(NetLangParser.DeviceDeclContext,0)


        def subnetDecl(self):
            return self.getTypedRuleContext(NetLangParser.SubnetDeclContext,0)


        def interfaceDecl(self):
            return self.getTypedRuleContext(NetLangParser.InterfaceDeclContext,0)


        def connectDecl(self):
            return self.getTypedRuleContext(NetLangParser.ConnectDeclContext,0)


        def getRuleIndex(self):
            return NetLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = NetLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 53
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.deviceDecl()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.subnetDecl()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 51
                self.interfaceDecl()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 52
                self.connectDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeviceDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEVICE(self):
            return self.getToken(NetLangParser.DEVICE, 0)

        def ID(self):
            return self.getToken(NetLangParser.ID, 0)

        def deviceType(self):
            return self.getTypedRuleContext(NetLangParser.DeviceTypeContext,0)


        def LBRACE(self):
            return self.getToken(NetLangParser.LBRACE, 0)

        def deviceBody(self):
            return self.getTypedRuleContext(NetLangParser.DeviceBodyContext,0)


        def RBRACE(self):
            return self.getToken(NetLangParser.RBRACE, 0)

        def getRuleIndex(self):
            return NetLangParser.RULE_deviceDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeviceDecl" ):
                listener.enterDeviceDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeviceDecl" ):
                listener.exitDeviceDecl(self)




    def deviceDecl(self):

        localctx = NetLangParser.DeviceDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_deviceDecl)
        try:
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.match(NetLangParser.DEVICE)
                self.state = 56
                self.match(NetLangParser.ID)
                self.state = 57
                self.deviceType()
                self.state = 58
                self.match(NetLangParser.LBRACE)
                self.state = 59
                self.deviceBody()
                self.state = 60
                self.match(NetLangParser.RBRACE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.match(NetLangParser.DEVICE)
                self.state = 63
                self.match(NetLangParser.ID)
                self.state = 64
                self.deviceType()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeviceBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def deviceProp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NetLangParser.DevicePropContext)
            else:
                return self.getTypedRuleContext(NetLangParser.DevicePropContext,i)


        def getRuleIndex(self):
            return NetLangParser.RULE_deviceBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeviceBody" ):
                listener.enterDeviceBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeviceBody" ):
                listener.exitDeviceBody(self)




    def deviceBody(self):

        localctx = NetLangParser.DeviceBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_deviceBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3 or _la==9:
                self.state = 67
                self.deviceProp()
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DevicePropContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUBNET(self):
            return self.getToken(NetLangParser.SUBNET, 0)

        def ID(self):
            return self.getToken(NetLangParser.ID, 0)

        def GATEWAY(self):
            return self.getToken(NetLangParser.GATEWAY, 0)

        def ipAddress(self):
            return self.getTypedRuleContext(NetLangParser.IpAddressContext,0)


        def getRuleIndex(self):
            return NetLangParser.RULE_deviceProp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeviceProp" ):
                listener.enterDeviceProp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeviceProp" ):
                listener.exitDeviceProp(self)




    def deviceProp(self):

        localctx = NetLangParser.DevicePropContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_deviceProp)
        try:
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.match(NetLangParser.SUBNET)
                self.state = 74
                self.match(NetLangParser.ID)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.match(NetLangParser.GATEWAY)
                self.state = 76
                self.ipAddress()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeviceTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ROUTER(self):
            return self.getToken(NetLangParser.ROUTER, 0)

        def SWITCH(self):
            return self.getToken(NetLangParser.SWITCH, 0)

        def HOST(self):
            return self.getToken(NetLangParser.HOST, 0)

        def getRuleIndex(self):
            return NetLangParser.RULE_deviceType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeviceType" ):
                listener.enterDeviceType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeviceType" ):
                listener.exitDeviceType(self)




    def deviceType(self):

        localctx = NetLangParser.DeviceTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_deviceType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 28672) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubnetDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUBNET(self):
            return self.getToken(NetLangParser.SUBNET, 0)

        def ID(self):
            return self.getToken(NetLangParser.ID, 0)

        def ipAddress(self):
            return self.getTypedRuleContext(NetLangParser.IpAddressContext,0)


        def SLASH(self):
            return self.getToken(NetLangParser.SLASH, 0)

        def INT(self):
            return self.getToken(NetLangParser.INT, 0)

        def getRuleIndex(self):
            return NetLangParser.RULE_subnetDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubnetDecl" ):
                listener.enterSubnetDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubnetDecl" ):
                listener.exitSubnetDecl(self)




    def subnetDecl(self):

        localctx = NetLangParser.SubnetDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_subnetDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(NetLangParser.SUBNET)
            self.state = 82
            self.match(NetLangParser.ID)
            self.state = 83
            self.ipAddress()
            self.state = 84
            self.match(NetLangParser.SLASH)
            self.state = 85
            self.match(NetLangParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InterfaceDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTERFACE(self):
            return self.getToken(NetLangParser.INTERFACE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(NetLangParser.ID)
            else:
                return self.getToken(NetLangParser.ID, i)

        def IP(self):
            return self.getToken(NetLangParser.IP, 0)

        def ipAddress(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NetLangParser.IpAddressContext)
            else:
                return self.getTypedRuleContext(NetLangParser.IpAddressContext,i)


        def MASK(self):
            return self.getToken(NetLangParser.MASK, 0)

        def getRuleIndex(self):
            return NetLangParser.RULE_interfaceDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterfaceDecl" ):
                listener.enterInterfaceDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterfaceDecl" ):
                listener.exitInterfaceDecl(self)




    def interfaceDecl(self):

        localctx = NetLangParser.InterfaceDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_interfaceDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(NetLangParser.INTERFACE)
            self.state = 88
            self.match(NetLangParser.ID)
            self.state = 89
            self.match(NetLangParser.ID)
            self.state = 90
            self.match(NetLangParser.IP)
            self.state = 91
            self.ipAddress()
            self.state = 92
            self.match(NetLangParser.MASK)
            self.state = 93
            self.ipAddress()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConnectDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONNECT(self):
            return self.getToken(NetLangParser.CONNECT, 0)

        def portRef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NetLangParser.PortRefContext)
            else:
                return self.getTypedRuleContext(NetLangParser.PortRefContext,i)


        def TO(self):
            return self.getToken(NetLangParser.TO, 0)

        def linkProps(self):
            return self.getTypedRuleContext(NetLangParser.LinkPropsContext,0)


        def getRuleIndex(self):
            return NetLangParser.RULE_connectDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConnectDecl" ):
                listener.enterConnectDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConnectDecl" ):
                listener.exitConnectDecl(self)




    def connectDecl(self):

        localctx = NetLangParser.ConnectDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_connectDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(NetLangParser.CONNECT)
            self.state = 96
            self.portRef()
            self.state = 97
            self.match(NetLangParser.TO)
            self.state = 98
            self.portRef()
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10 or _la==11:
                self.state = 99
                self.linkProps()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PortRefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(NetLangParser.ID)
            else:
                return self.getToken(NetLangParser.ID, i)

        def DOT(self):
            return self.getToken(NetLangParser.DOT, 0)

        def getRuleIndex(self):
            return NetLangParser.RULE_portRef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPortRef" ):
                listener.enterPortRef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPortRef" ):
                listener.exitPortRef(self)




    def portRef(self):

        localctx = NetLangParser.PortRefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_portRef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(NetLangParser.ID)
            self.state = 103
            self.match(NetLangParser.DOT)
            self.state = 104
            self.match(NetLangParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LinkPropsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def linkProp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NetLangParser.LinkPropContext)
            else:
                return self.getTypedRuleContext(NetLangParser.LinkPropContext,i)


        def getRuleIndex(self):
            return NetLangParser.RULE_linkProps

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLinkProps" ):
                listener.enterLinkProps(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLinkProps" ):
                listener.exitLinkProps(self)




    def linkProps(self):

        localctx = NetLangParser.LinkPropsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_linkProps)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 106
                self.linkProp()
                self.state = 109 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==10 or _la==11):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LinkPropContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BANDWIDTH(self):
            return self.getToken(NetLangParser.BANDWIDTH, 0)

        def INT(self):
            return self.getToken(NetLangParser.INT, 0)

        def speedUnit(self):
            return self.getTypedRuleContext(NetLangParser.SpeedUnitContext,0)


        def LATENCY(self):
            return self.getToken(NetLangParser.LATENCY, 0)

        def timeUnit(self):
            return self.getTypedRuleContext(NetLangParser.TimeUnitContext,0)


        def getRuleIndex(self):
            return NetLangParser.RULE_linkProp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLinkProp" ):
                listener.enterLinkProp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLinkProp" ):
                listener.exitLinkProp(self)




    def linkProp(self):

        localctx = NetLangParser.LinkPropContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_linkProp)
        try:
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.match(NetLangParser.BANDWIDTH)
                self.state = 112
                self.match(NetLangParser.INT)
                self.state = 113
                self.speedUnit()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(NetLangParser.LATENCY)
                self.state = 115
                self.match(NetLangParser.INT)
                self.state = 116
                self.timeUnit()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SpeedUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KBPS(self):
            return self.getToken(NetLangParser.KBPS, 0)

        def MBPS(self):
            return self.getToken(NetLangParser.MBPS, 0)

        def GBPS(self):
            return self.getToken(NetLangParser.GBPS, 0)

        def getRuleIndex(self):
            return NetLangParser.RULE_speedUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpeedUnit" ):
                listener.enterSpeedUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpeedUnit" ):
                listener.exitSpeedUnit(self)




    def speedUnit(self):

        localctx = NetLangParser.SpeedUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_speedUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 229376) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TimeUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MS(self):
            return self.getToken(NetLangParser.MS, 0)

        def US(self):
            return self.getToken(NetLangParser.US, 0)

        def getRuleIndex(self):
            return NetLangParser.RULE_timeUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTimeUnit" ):
                listener.enterTimeUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTimeUnit" ):
                listener.exitTimeUnit(self)




    def timeUnit(self):

        localctx = NetLangParser.TimeUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_timeUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            _la = self._input.LA(1)
            if not(_la==18 or _la==19):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IpAddressContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(NetLangParser.INT)
            else:
                return self.getToken(NetLangParser.INT, i)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(NetLangParser.DOT)
            else:
                return self.getToken(NetLangParser.DOT, i)

        def getRuleIndex(self):
            return NetLangParser.RULE_ipAddress

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIpAddress" ):
                listener.enterIpAddress(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIpAddress" ):
                listener.exitIpAddress(self)




    def ipAddress(self):

        localctx = NetLangParser.IpAddressContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_ipAddress)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(NetLangParser.INT)
            self.state = 124
            self.match(NetLangParser.DOT)
            self.state = 125
            self.match(NetLangParser.INT)
            self.state = 126
            self.match(NetLangParser.DOT)
            self.state = 127
            self.match(NetLangParser.INT)
            self.state = 128
            self.match(NetLangParser.DOT)
            self.state = 129
            self.match(NetLangParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





